<resources>
    <string name="app_name">Glicemap</string>

    <!--NAVIGATION-->
    <string name="title_home">Início</string>
    <string name="title_day">Dia</string>
    <string name="title_report">Relatórios</string>
    <string name="title_notifications">Lembretes</string>
    <string name="title_settings">Configurações</string>
    <string name="welcome_text">Bem Vindo, %s!</string>
    <string name="new_measurement_label">Adicionar Registro</string>
    <string name="measurement_label">Registro</string>



    <!--CALENDAR-->
    <string name="material_calendar_monday">S</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">Q</string>
    <string name="material_calendar_thursday">Q</string>
    <string name="material_calendar_friday">S</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="material_calendar_months_array">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </array>

    <!--NEW MEASUREMENT-->
    <string name="new_measure_circumstance">Ocasião:</string>
    <string name="new_measure_sugar_level">Glicemia:</string>
    <string name="new_measurement_sugar_unit">mg/dl</string>
    <string name="new_measurement_insulin">Insulina Aplicada:</string>
    <string name="new_measurement_insulin_unit">UI</string>
    <string name="new_measurement_notes">Anotações:</string>
    <string name="new_measurement_notes_hint">Use esse espaço para anotar informações adicionais, como a realização de atividades físicas, alimentação, etc</string>
    <string name="measurement_title">%s %s de %s de %s</string>



    <string name="measurement_insulin">Insulina: %s UI</string>
    <string name="measurement_sugar_level_rv">%s</string>
    <string name="measurement_sugar_level">%s mg/dl</string>
    <string name="settings_sugar_min_level">Glicemia Alvo Máx: %s mg/dl</string>
    <string name="settings_sugar_max_level">Glicemia Alvo Min: %s mg/dl</string>

    <string name="settings_doctor_crm">CRM: %s</string>





</resources>