<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/newMeasure"
    android:background="@color/white"
    tools:context=".ui.home.NewMeasurementFragment">



    <include layout="@layout/collapsing_toolbar_white"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility ="visible"/>

    <TextView
        android:id="@+id/circumstance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarWhite"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Ocasião"
        android:textSize="@dimen/text_subheading"
        android:textColor="@color/NavyBlue"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large_mediumX"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/new_measure_circumstance"
        style="bold"/>

    <Spinner
        android:id="@+id/circumstance_sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large_mediumX"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textColorHighlight="@color/TransparentNavyBlue"
        android:textColor="@color/Blacktext"
        app:layout_constraintTop_toBottomOf="@id/appBarWhite"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/div1"
        app:layout_constraintTop_toBottomOf="@id/circumstance_tv"
        android:layout_marginVertical="@dimen/margin_large_mediumX"/>

    <TextView
        android:id="@+id/sugar_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div1"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Glicemia"
        android:textSize="@dimen/text_subheading"
        android:textColor="@color/NavyBlue"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/new_measure_sugar_level"
        style="bold"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/sugar_level_et"
        app:layout_constraintTop_toBottomOf="@id/div1"
        app:layout_constraintEnd_toStartOf="@id/sugar_level_et_tv"
        android:hint="98"
        android:maxLength="3"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@color/NavyBlue"
        android:textColorHighlight="@color/TransparentNavyBlue"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textSize="@dimen/text_headline"
        android:layout_marginVertical="@dimen/margin_large_mediumX"/>

    <TextView
        android:id="@+id/sugar_level_et_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="mg/dl"
        android:textSize="@dimen/text_headline"
        android:textColor="@color/NavyBlue"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/new_measurement_sugar_unit"
        style="bold"/>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/div2"
        app:layout_constraintTop_toBottomOf="@id/sugar_level_tv"
        android:layout_marginVertical="@dimen/margin_large_mediumX"/>

    <TextView
        android:id="@+id/insulin_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div2"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Insulina Aplicada:"
        android:textSize="@dimen/text_subheading"
        android:textColor="@color/NavyBlue"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/new_measurement_insulin"
        style="bold"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/insulin_et"
        app:layout_constraintTop_toBottomOf="@id/div2"
        app:layout_constraintEnd_toStartOf="@id/sugar_level_et_tv"
        android:textAlignment="center"
        android:textColor="@color/NavyBlue"
        android:hint="2"
        android:maxLength="1"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="number"
        android:textColorHighlight="@color/TransparentNavyBlue"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textSize="@dimen/text_headline"
        android:layout_marginVertical="@dimen/margin_large_mediumX"/>

    <TextView
        android:id="@+id/insulin_et_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/insulin_et"
        tools:text="UI"
        android:textSize="@dimen/text_headline"
        android:textColor="@color/NavyBlue"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/new_measurement_insulin_unit"
        style="bold"/>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/div3"
        app:layout_constraintTop_toBottomOf="@id/insulin_tv"
        android:layout_marginVertical="@dimen/margin_large_mediumX"/>

    <TextView
        android:id="@+id/notes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div3"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Anotações"
        android:textSize="@dimen/text_subheading"
        android:textColor="@color/NavyBlue"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/new_measurement_notes"
        style="bold"/>

    <EditText
        android:id="@+id/notes_et"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div3"
        android:textColor="@color/NavyBlue"
        android:gravity="top"
        android:textColorHint="@android:color/darker_gray"
        android:padding="10dp"
        android:hint="@string/new_measurement_notes_hint"
        android:textColorHighlight="@color/TransparentNavyBlue"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        android:layout_marginVertical="@dimen/margin_medium"
        android:background="@drawable/rectangle_text_box"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Registrar"
        app:layout_constraintTop_toBottomOf="@+id/notes_et"
        android:backgroundTint="@color/NavyBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:borderWidth="0dp"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>