<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangle_1"
    style="@style/AppBottomSheetDialogTheme">


    <include
        layout="@layout/collapsing_toolbar_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <View
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large_mediumX"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/appBarWhite" />

    <TextView
        android:id="@+id/circumstance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
app:layout_constraintTop_toBottomOf="@id/div1"        app:layout_constraintStart_toStartOf="parent"
        tools:text="Ocasião"
        android:textSize="@dimen/text_subheading"
        android:textColor="@color/NavyBlue"
        android:layout_marginTop="@dimen/margin_large_mediumX"
        android:layout_marginBottom="@dimen/margin_large_mediumX"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/new_measure_circumstance"
        style="bold"/>

    <TextView
        android:id="@+id/circumstance_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large_mediumX"
        android:layout_marginBottom="@dimen/margin_large_mediumX"
        android:layout_marginEnd="@dimen/margin_medium_large"
        android:textColorHighlight="@color/TransparentNavyBlue"
        android:textColor="@color/Blacktext"
        android:textSize="@dimen/text_subtitle"
        tools:text="Antes do Almoço"
        app:layout_constraintTop_toBottomOf="@id/div1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/div2"
        app:layout_constraintTop_toBottomOf="@id/circumstance_tv"
        android:layout_marginVertical="@dimen/margin_large_mediumX"/>

    <TextView
        android:id="@+id/sugar_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div2"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Glicemia"
        android:textSize="@dimen/text_subheading"
        android:textColor="@color/NavyBlue"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/new_measure_sugar_level"
        style="bold"/>

    <TextView
        android:id="@+id/sugar_level_et_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="98 mg/dl"
        android:textSize="@dimen/text_headline"
        android:textColor="@color/NavyBlue"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginEnd="@dimen/margin_medium_large"

        style="bold"/>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/div3"
        app:layout_constraintTop_toBottomOf="@id/sugar_level_tv"
        android:layout_marginVertical="@dimen/margin_large_mediumX"/>

    <TextView
        android:id="@+id/insulin_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div3"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Insulina Aplicada:"
        android:textSize="@dimen/text_subheading"
        android:textColor="@color/NavyBlue"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/new_measurement_insulin"
        style="bold"/>

    <TextView
        android:id="@+id/insulin_et_tv"
        style="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginEnd="@dimen/margin_medium_large"
        android:textColor="@color/NavyBlue"
        android:textSize="@dimen/text_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div3"
        tools:text="1 UI" />



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/div4"
        app:layout_constraintTop_toBottomOf="@id/insulin_tv"
        android:layout_marginVertical="@dimen/margin_large_mediumX"/>

    <TextView
        android:id="@+id/notes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div4"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Anotações"
        android:textSize="@dimen/text_subheading"
        android:textColor="@color/NavyBlue"
        android:layout_marginVertical="@dimen/margin_large_mediumX"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/new_measurement_notes"
        app:layout_constraintBaseline_toBaselineOf="@id/notes_et"
        style="bold"/>

    <TextView
        android:id="@+id/notes_et"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div4"
        android:textColor="@color/NavyBlue"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="@dimen/margin_medium"/>


</androidx.constraintlayout.widget.ConstraintLayout>